syntax = "proto3";

option csharp_namespace = "Quik.Grpc.Entities.Primitives";

package quik_grpc;

message ProtoGuid{
	string value = 1;
}
